Working on font rendering. Broken for the moment.