@@ -1,27 +1,24 @@
 package com.doobs.exort.util.font;
 
 import java.io.*;
+import java.util.*;
 
 import com.doobs.exort.util.texture.*;
 
 @SuppressWarnings("rawtypes")
 public class CharInfoLoader {
-	public static Character[] load(Class c, Texture texture, String URL) {
-		Character[] characters = null;
-
-		System.out.println((int) '0' + " " + (int) '9');
-		
+	
+	public static Map<Integer, Character> load(Class c, Texture texture, String URL) {
 		try {
 			BufferedReader reader = new BufferedReader(new InputStreamReader(c.getResourceAsStream(URL)));
+			
+			Map<Integer, Character> characters = new HashMap<Integer, Character>();
 			
 			String line;
 			String[] temp;
 
 			while ((line = reader.readLine()) != null) {
-				if (line.startsWith("chars ")) {
-					temp = line.split("=");
-					characters = new Character[255];//Integer.valueOf(temp[1])];
-				} else if (line.startsWith("char ")) {
+				if (line.startsWith("char ")) {
 					String number = "";
 					int numbers = 0;
 					temp = new String[6];
@@ -38,14 +35,14 @@ public class CharInfoLoader {
 						}
 					}
 					
-					characters[Integer.valueOf(temp[0])] = new Character(texture.getWidth(), texture.getHeight(), Integer.valueOf(temp[1]),
-							Integer.valueOf(temp[2]), Integer.valueOf(temp[3]), Integer.valueOf(temp[4]));
+					characters.put(Integer.valueOf(temp[0]), new Character(texture.getWidth(), texture.getHeight(), Integer.valueOf(temp[1]),
+							Integer.valueOf(temp[2]), Integer.valueOf(temp[3]), Integer.valueOf(temp[4])));
 				}
 			}
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
 
-		return characters;
+		return null;
 	}
 }
